# VigiSense

./: .gitignore  CMakeLists.txt  README.md  Sensor.cpp  User  index.html  packages.microsoft.gpg
Board1/: PCB2.pcbdoc
Board1/Schematic1/: 1_Sheet_1.schdoc.schdoc
demo_ping/: CMakeLists.txt  SPO2Tracker.cpp  SPO2Tracker.h  alertPubSubTypes.h  subscriber.cpp  test.cpp
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_0c9021901c61aaba97633cc19e62ddf1.html  dir_0c9021901c61aaba97633cc19e62ddf1.js  dir_d1073aeda30420111aeecdf503cb1f1f.html  dir_d1073aeda30420111aeecdf503cb1f1f.js  dir_d1073aeda30420111aeecdf503cb1f1f_dep.map  dir_d1073aeda30420111aeecdf503cb1f1f_dep.md5  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_u.html  functions_func_w.html  functions_func_~.html  (+100 more)
doc/html/d0/d1a/: alert_pub_sub_types_8h__dep__incl.map  alert_pub_sub_types_8h__dep__incl.md5
doc/html/d0/d23/: struct_m_a_x30102_1_1_record-members.html
doc/html/d0/d7c/: _s_p_o2_tracker_8cpp__incl.map  _s_p_o2_tracker_8cpp__incl.md5
doc/html/d0/d81/: class_low_pass_filter3_matched_z__inherit__graph.map  class_low_pass_filter3_matched_z__inherit__graph.md5
doc/html/d0/da5/: _m_a_x30102_8h__dep__incl.map  _m_a_x30102_8h__dep__incl.md5
doc/html/d0/db4/: alert_8cxx__incl.map  alert_8cxx__incl.md5
doc/html/d0/ddb/: structdiagnosis_1_1_diagnosis_range-members.html
doc/html/d1/d07/: _circular_delay_8hpp__dep__incl.map  _circular_delay_8hpp__dep__incl.md5
doc/html/d1/d09/: class_m_a_x30102__coll__graph.map  class_m_a_x30102__coll__graph.md5
doc/html/d1/d27/: _device_publisher_8cpp__incl.map  _device_publisher_8cpp__incl.md5
doc/html/d1/d4b/: _digital_filters_8h.html  _digital_filters_8h.js  _digital_filters_8h_source.html
doc/html/d1/d67/: structdiagnosis_1_1_diagnoses_table-members.html
doc/html/d1/d69/: class_s_p_o2_tracker-members.html
doc/html/d1/d93/: class_high_pass_filter3.html  class_high_pass_filter3.js  class_high_pass_filter3_a85cf9d166660457475a0ee8d44b4ae30_cgraph.map  class_high_pass_filter3_a85cf9d166660457475a0ee8d44b4ae30_cgraph.md5  class_high_pass_filter3_a976f9cce2a86d7e8c674c0de9eded001_cgraph.map  class_high_pass_filter3_a976f9cce2a86d7e8c674c0de9eded001_cgraph.md5
doc/html/d1/dbf/: class_high_pass_filter3-members.html
doc/html/d1/ded/: structsymptom_range-members.html
doc/html/d2/d43/: class_low_pass_filter2.html  class_low_pass_filter2.js  class_low_pass_filter2_a053fed2b2d040e6dbfed5f1b6ddab3e6_cgraph.map  class_low_pass_filter2_a053fed2b2d040e6dbfed5f1b6ddab3e6_cgraph.md5  class_low_pass_filter2_aa65e10057d975ce9569503f71df2c8e1_cgraph.map  class_low_pass_filter2_aa65e10057d975ce9569503f71df2c8e1_cgraph.md5
doc/html/d2/d45/: class_device_publisher.html  class_device_publisher.js
doc/html/d2/d66/: namespacetps.html  namespacetps_a4ba84c64ef7f752a77bd0adc41dc1900_cgraph.map  namespacetps_a4ba84c64ef7f752a77bd0adc41dc1900_cgraph.md5  structi2c__rdwr__ioctl__data-members.html
doc/html/d2/d75/: test_sp_o2_8cpp__incl.map  test_sp_o2_8cpp__incl.md5
doc/html/d2/d80/: class_high_pass_filter3__inherit__graph.map  class_high_pass_filter3__inherit__graph.md5
doc/html/d2/d8e/: _sensor_8cpp__incl.map  _sensor_8cpp__incl.md5
doc/html/d2/d95/: structdiagnosis_1_1_diagnosis_range.html  structdiagnosis_1_1_diagnosis_range.js
doc/html/d2/d9e/: classdiagnosis_interface__inherit__graph.map  classdiagnosis_interface__inherit__graph.md5
doc/html/d2/db2/: class_low_pass_filter3_diff_approx__inherit__graph.map  class_low_pass_filter3_diff_approx__inherit__graph.md5
doc/html/d2/dca/: class_low_pass_filter3_diff_approx__coll__graph.map  (+1 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  (+52 more)
doc/latex/: annotated.tex  dir_0c9021901c61aaba97633cc19e62ddf1.tex  dir_d1073aeda30420111aeecdf503cb1f1f.tex  files.tex  hierarchy.tex  namespaces.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
example/: CMakeLists.txt
images/: MH-ET-Live-MAX30102-Heart-Rate-Sensor-Module.jpg:Zone.Identifier  pcb.jpg:Zone.Identifier
libraries/: DigitalFilters.h
src/: CMakeCache.txt  CMakeLists.txt  DevicePublisher.cpp  DeviceSubscriber.cpp  Diagnosis.cpp  DiagnosisInterface.h  HRTracker.cpp  HRTracker.h  MAX30102.cpp  MAX30102.h  Makefile  SPO2.cpp  SPO2.h  SPO2Tracker.cpp  SPO2Tracker.h  Sensor.cpp  Sensor.h  UnitTestSpO2Symptom(1)  User.cpp  alert.cxx  alert.h  alert.idl  cmake_install.cmake  complexDiagnosis.cpp  reportCalcLatency.csv  reportISRLatency.csv  sensorTest.cpp  sensorTest.h  test  test.cpp  testParent.h  testSpO2  testSpO2.cpp  unitTest.cpp  unitTestHrSymptom.cpp  unitTestSpO2Symptom.cpp  unitTest_PeakDetect.cpp  unitTest_SPO2Calc  unitTest_SPO2Calc.cpp
test/: CMakeLists.txt  Diagnosis.h  DiagnosisInterface.h  DigitalFilters.h  HRTracker.h  MAX30102.cpp  SPO2Tracker.h  Sensor.h  alert.cxx  alertPubSubTypes.cxx  cmake_install.cmake  unitTestHrSymptom  unitTestSpO2Symptom
tests/: CMakeLists.txt  unitTestHrSymptom.cpp  unitTestSpO2Symptom.cpp  unitTest_PeakDetect.cpp  unitTest_SPO2Calc.cpp
(+662 files in other folders)
